--- a/src/phpstan.neon
+++ b/src/phpstan.neon
@@ -4,7 +4,8 @@ parameters:
     paths:
         - app
     # The level 9 is the highest level
-    level: 9
+    level: 8
     excludePaths:
         - ./*/*/FileToBeExcluded.php
     checkMissingIterableValueType: false
+    checkGenericClassInNonGenericObjectType: false
