--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BdvwATK7F3JKlQy2wxB8Bwhxlb21FmpISalidlrmmV8=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
